update home-page sign-up company

--- a/pages/SignUpSignIn/PrivatEvewnt/index.html
+++ b/pages/SignUpSignIn/PrivatEvewnt/index.html
@@ -17,6 +17,13 @@
 	<title>Registration</title>
 </head>
 <body>
+	<svg style="height: 0; width: 0; position: absolute">
+		<defs>
+			<mask id="mask0_947_30047" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="2" y="1" width="16" height="18">
+				<path d="M17.0833 18.3334C17.0833 18.3334 14.6281 17.3672 12.6422 16.5938H4.2901C3.30208 16.5938 2.5 15.7427 2.5 14.6943V3.5646C2.5 2.51721 3.30208 1.66669 4.2901 1.66669H15.2927C16.2812 1.66669 17.0828 2.51669 17.0828 3.56512V13.1505L17.0833 18.3334ZM14.9276 12.0927C14.8886 12.0427 14.8396 12.0012 14.7838 11.9711C14.7279 11.9409 14.6664 11.9227 14.6032 11.9176C14.5399 11.9124 14.4763 11.9205 14.4163 11.9412C14.3563 11.962 14.3013 11.9949 14.2547 12.038C14.2391 12.0516 12.6844 13.4344 9.79115 13.4344C6.93385 13.4344 5.35521 12.0615 5.32708 12.0365C5.28046 11.9936 5.22544 11.9608 5.16552 11.9403C5.1056 11.9197 5.04206 11.9118 4.97893 11.9171C4.9158 11.9223 4.85443 11.9406 4.79872 11.9707C4.743 12.0009 4.69413 12.0422 4.65521 12.0922C4.57184 12.1962 4.53107 12.328 4.54115 12.461C4.54995 12.5932 4.60925 12.717 4.70677 12.8068C4.78073 12.8735 6.54896 14.4474 9.79115 14.4474C13.0339 14.4474 14.8021 12.8735 14.876 12.8068C14.9734 12.7169 15.0325 12.5931 15.0411 12.461C15.0512 12.3283 15.0107 12.1967 14.9276 12.0927Z" fill="#A24DE8"/>
+			</mask>
+		</defs>
+	</svg>
 <main>
 
 	<!--		Navigation panel-->
@@ -26,6 +33,14 @@
 			<div class="logo-full"></div>
 		</div>
 		<div class="line"></div>
+		<a class="chat">
+			<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+				<g mask="url(#mask0_937_5382)">
+					<rect width="20" height="20" fill="#A24DE8"/>
+				</g>
+			</svg>
+			<span>Chat</span>
+		</a>
 	</div>
 
 	<!--		Main content-->
@@ -49,9 +64,9 @@
 			</p>
 			<button class="btn primary-btn" type="submit">Login</button>
 			<div class="bottom-privat">
-				<h3 class="bottom-title">
+				<h4 class="bottom-title">
 					Don’t have an account?
-				</h3>
+				</h4>
 				<a href="#" class="bottom-link link">
 					Join now
 				</a>
@@ -112,6 +127,15 @@
 			</div>
 		</div>
 	</div>
+	<!-- Navigation-btn-chat-mobile  -->
+
+	<button class="btn-chat-mobile">
+		<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+			<g mask="url(#mask0_947_30047)">
+				<rect width="20" height="20" fill="white"/>
+			</g>
+		</svg>
+	</button>
 </main>
 <script>
 
