--- a/pages/Company/EditCompany/index.html
+++ b/pages/Company/EditCompany/index.html
@@ -74,6 +74,12 @@
 		<mask id="mask0_601_13888" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="20" height="20">
 			<path fill-rule="evenodd" clip-rule="evenodd" d="M9.00026 18.0669C9.00026 18.6192 9.44798 19.0669 10.0003 19.0669C10.5525 19.0669 11.0003 18.6192 11.0003 18.0669V11.0003H18.0669C18.6192 11.0003 19.0669 10.5526 19.0669 10.0003C19.0669 9.44798 18.6192 9.00027 18.0669 9.00027H11.0003V1.93359C11.0003 1.38131 10.5525 0.933594 10.0003 0.933594C9.44798 0.933594 9.00026 1.38131 9.00026 1.93359V9.00027H1.93359C1.38131 9.00027 0.933594 9.44798 0.933594 10.0003C0.933594 10.5526 1.38131 11.0003 1.93359 11.0003H9.00026V18.0669Z" fill="#140E17"/>
 		</mask>
+		<mask id="mask0_937_5382" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="2" y="1" width="16" height="18">
+			<path d="M17.0833 18.3337C17.0833 18.3337 14.6281 17.3675 12.6422 16.5941H4.2901C3.30208 16.5941 2.5 15.743 2.5 14.6946V3.56491C2.5 2.51751 3.30208 1.66699 4.2901 1.66699H15.2927C16.2813 1.66699 17.0828 2.51699 17.0828 3.56543V13.1508L17.0833 18.3337ZM14.9276 12.093C14.8886 12.043 14.8396 12.0015 14.7838 11.9714C14.7279 11.9412 14.6664 11.923 14.6032 11.9179C14.5399 11.9127 14.4763 11.9208 14.4163 11.9415C14.3563 11.9623 14.3013 11.9952 14.2547 12.0383C14.2391 12.0519 12.6844 13.4347 9.79115 13.4347C6.93386 13.4347 5.35521 12.0618 5.32708 12.0368C5.28046 11.9939 5.22544 11.9611 5.16552 11.9406C5.1056 11.92 5.04206 11.9121 4.97893 11.9174C4.9158 11.9226 4.85443 11.9409 4.79872 11.971C4.743 12.0012 4.69413 12.0425 4.65521 12.0925C4.57184 12.1965 4.53107 12.3283 4.54115 12.4613C4.54995 12.5935 4.60925 12.7173 4.70677 12.8071C4.78073 12.8738 6.54896 14.4477 9.79115 14.4477C13.0339 14.4477 14.8021 12.8738 14.876 12.8071C14.9734 12.7172 15.0325 12.5934 15.0412 12.4613C15.0512 12.3286 15.0107 12.197 14.9276 12.093Z" fill="#A24DE8"/>
+		</mask>
+		<mask id="mask0_947_30047" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="2" y="1" width="16" height="18">
+			<path d="M17.0833 18.3334C17.0833 18.3334 14.6281 17.3672 12.6422 16.5938H4.2901C3.30208 16.5938 2.5 15.7427 2.5 14.6943V3.5646C2.5 2.51721 3.30208 1.66669 4.2901 1.66669H15.2927C16.2812 1.66669 17.0828 2.51669 17.0828 3.56512V13.1505L17.0833 18.3334ZM14.9276 12.0927C14.8886 12.0427 14.8396 12.0012 14.7838 11.9711C14.7279 11.9409 14.6664 11.9227 14.6032 11.9176C14.5399 11.9124 14.4763 11.9205 14.4163 11.9412C14.3563 11.962 14.3013 11.9949 14.2547 12.038C14.2391 12.0516 12.6844 13.4344 9.79115 13.4344C6.93385 13.4344 5.35521 12.0615 5.32708 12.0365C5.28046 11.9936 5.22544 11.9608 5.16552 11.9403C5.1056 11.9197 5.04206 11.9118 4.97893 11.9171C4.9158 11.9223 4.85443 11.9406 4.79872 11.9707C4.743 12.0009 4.69413 12.0422 4.65521 12.0922C4.57184 12.1962 4.53107 12.328 4.54115 12.461C4.54995 12.5932 4.60925 12.717 4.70677 12.8068C4.78073 12.8735 6.54896 14.4474 9.79115 14.4474C13.0339 14.4474 14.8021 12.8735 14.876 12.8068C14.9734 12.7169 15.0325 12.5931 15.0411 12.461C15.0512 12.3283 15.0107 12.1967 14.9276 12.0927Z" fill="#A24DE8"/>
+		</mask>
 	</svg>
 	<main>
 		<div class="navigation hide">
@@ -114,6 +120,14 @@
 				</li>
 			</nav>
 			<div class="bottom">
+				<a class="chat">
+					<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<g mask="url(#mask0_937_5382)">
+							<rect width="20" height="20" fill="#A24DE8"/>
+						</g>
+					</svg>
+					<span>Chat</span>
+				</a>
 				<a class="book-a-demo">
 					<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 						<g mask="url(#mask0_291_2964)">
@@ -151,9 +165,12 @@
 				</button>
 			</div>
 			<div class="container-companies">
-				<a href="#" class="company-item link">
+				<button href="#" class="company-item isActive">
 					Marriott International
-				</a>
+				</button>
+				<button href="#" class="company-item">
+					Samsung
+				</button>
 			</div>
 		</div>
 		<div class="container-content">
@@ -175,14 +192,45 @@
 					</div>
 				</div>
 				<div class="content-header">
+
+					<!-- Mobile select -->
+
+					<div class="header-mobile-wrapper">
+						<div class="select">
+							<div class="select__header">
+								<span class="select__current"> Mariott international</span>
+								<span class="arrow-icon">
+									<svg width="20" height="20" viewBox="0 0 20 20" fill="#A24DE8" xmlns="http://www.w3.org/2000/svg">
+									<g mask="url(#mask0_553_20590)">
+									<rect width="20" height="20"/>
+									</g>
+									</svg>
+								</span>
+							</div>
+							<div class="select__body">
+								<div class="select__item">Mariott international</div>
+								<div class="select__item">Samsung</div>
+							</div>
+						</div>
+						<button class="add-company-mobile-btn secondary-btn">
+							<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<mask id="mask0_1027_33593" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="1" y="1" width="18" height="18">
+								<path fill-rule="evenodd" clip-rule="evenodd" d="M9 17.5C9 18.0523 9.44772 18.5 10 18.5C10.5523 18.5 11 18.0523 11 17.5V11H17.5C18.0523 11 18.5 10.5523 18.5 9.99998C18.5 9.4477 18.0523 8.99998 17.5 8.99998H11V2.5C11 1.94771 10.5523 1.5 10 1.5C9.44772 1.5 9 1.94771 9 2.5L9 8.99998H2.5C1.94772 8.99998 1.5 9.4477 1.5 9.99998C1.5 10.5523 1.94772 11 2.5 11H9L9 17.5Z" fill="#140E17"/>
+								</mask>
+								<g mask="url(#mask0_1027_33593)">
+								<rect width="20" height="20" fill="#A24DE8"/>
+								</g>
+							</svg>
+						</button>
+					</div>
 					<h1 class="header-title">
 						Marriott International
 					</h1>
 					<div class="button-wrap">
-						<button class="header-btn isActive">
+						<button class="header-btn">
 							Company info
 						</button>
-						<button class="header-btn">
+						<button class="header-btn isActive">
 							Members
 						</button>
 					</div>
@@ -247,7 +295,7 @@
 						<div class="loaded-photo mini">
 							<div class="photo"></div>
 							<div class="instruments">
-								<div class="left btn-link-text">Upload logo</div>
+								<input type="file" class="left btn-link-text upload-photo-input" accept="image/*">
 								<div class="right btn-link-text">Remove</div>
 							</div>
 						</div>
@@ -264,6 +312,15 @@
 				<button class="btn primary-btn" type="submit" onclick="showAlert()">Save changes</button>
 			</div>
 		</div>
+		<!-- Navigation-btn-chat-mobile  -->
+
+		<button class="btn-chat-mobile">
+			<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+				<g mask="url(#mask0_947_30047)">
+					<rect width="20" height="20" fill="white"/>
+				</g>
+			</svg>
+		</button>
 	</main>
 
 <script src="../../../js/show-menu.js"></script>
