--- a/pages/Company/Invitation/index.html
+++ b/pages/Company/Invitation/index.html
@@ -87,6 +87,12 @@
 		<mask id="mask0_715_22326" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="4" y="2" width="17" height="20">
 			<path d="M6.19961 9.1199C6.77951 9.1199 7.24961 9.59 7.24961 10.1699V19.6799H17.7496V10.1699C17.7496 9.59001 18.2197 9.1199 18.7996 9.1199C19.3795 9.1199 19.8496 9.59 19.8496 10.1699V20.6399C19.8496 21.1701 19.3795 21.5999 18.7996 21.5999H6.19961C5.61971 21.5999 5.14961 21.1701 5.14961 20.6399V10.1699C5.14961 9.59001 5.61971 9.1199 6.19961 9.1199ZM10.3996 9.1199C10.9795 9.1199 11.4496 9.59 11.4496 10.1699V16.7099C11.4496 17.2898 10.9795 17.7599 10.3996 17.7599C9.81971 17.7599 9.34961 17.2898 9.34961 16.7099V10.1699C9.34961 9.59 9.81971 9.1199 10.3996 9.1199ZM14.5996 9.1199C15.1795 9.1199 15.6496 9.59 15.6496 10.1699V16.7099C15.6496 17.2898 15.1795 17.7599 14.5996 17.7599C14.0197 17.7599 13.5496 17.2898 13.5496 16.7099V10.1699C13.5496 9.59 14.0197 9.1199 14.5996 9.1199ZM15.6496 2.3999C16.1016 2.3999 16.5028 2.66432 16.6457 3.05632L17.4556 5.27894L19.9397 5.27964C20.4699 5.27978 20.8996 5.70961 20.8996 6.23977C20.8996 6.77004 20.4697 7.1999 19.9395 7.1999H5.05974C4.52948 7.1999 4.09961 6.77004 4.09961 6.23977C4.09961 5.70961 4.52931 5.27978 5.05948 5.27964L7.54256 5.27894L8.35349 3.05632C8.49641 2.66432 8.89766 2.3999 9.34961 2.3999H15.6496ZM14.8928 4.3199H10.1064L9.75596 5.27894H15.2422L14.8928 4.3199Z" fill="#140E17"/>
 		</mask>
+		<mask id="mask0_937_5382" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="2" y="1" width="16" height="18">
+			<path d="M17.0833 18.3337C17.0833 18.3337 14.6281 17.3675 12.6422 16.5941H4.2901C3.30208 16.5941 2.5 15.743 2.5 14.6946V3.56491C2.5 2.51751 3.30208 1.66699 4.2901 1.66699H15.2927C16.2813 1.66699 17.0828 2.51699 17.0828 3.56543V13.1508L17.0833 18.3337ZM14.9276 12.093C14.8886 12.043 14.8396 12.0015 14.7838 11.9714C14.7279 11.9412 14.6664 11.923 14.6032 11.9179C14.5399 11.9127 14.4763 11.9208 14.4163 11.9415C14.3563 11.9623 14.3013 11.9952 14.2547 12.0383C14.2391 12.0519 12.6844 13.4347 9.79115 13.4347C6.93386 13.4347 5.35521 12.0618 5.32708 12.0368C5.28046 11.9939 5.22544 11.9611 5.16552 11.9406C5.1056 11.92 5.04206 11.9121 4.97893 11.9174C4.9158 11.9226 4.85443 11.9409 4.79872 11.971C4.743 12.0012 4.69413 12.0425 4.65521 12.0925C4.57184 12.1965 4.53107 12.3283 4.54115 12.4613C4.54995 12.5935 4.60925 12.7173 4.70677 12.8071C4.78073 12.8738 6.54896 14.4477 9.79115 14.4477C13.0339 14.4477 14.8021 12.8738 14.876 12.8071C14.9734 12.7172 15.0325 12.5934 15.0412 12.4613C15.0512 12.3286 15.0107 12.197 14.9276 12.093Z" fill="#A24DE8"/>
+		</mask>
+		<mask id="mask0_947_30047" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="2" y="1" width="16" height="18">
+			<path d="M17.0833 18.3334C17.0833 18.3334 14.6281 17.3672 12.6422 16.5938H4.2901C3.30208 16.5938 2.5 15.7427 2.5 14.6943V3.5646C2.5 2.51721 3.30208 1.66669 4.2901 1.66669H15.2927C16.2812 1.66669 17.0828 2.51669 17.0828 3.56512V13.1505L17.0833 18.3334ZM14.9276 12.0927C14.8886 12.0427 14.8396 12.0012 14.7838 11.9711C14.7279 11.9409 14.6664 11.9227 14.6032 11.9176C14.5399 11.9124 14.4763 11.9205 14.4163 11.9412C14.3563 11.962 14.3013 11.9949 14.2547 12.038C14.2391 12.0516 12.6844 13.4344 9.79115 13.4344C6.93385 13.4344 5.35521 12.0615 5.32708 12.0365C5.28046 11.9936 5.22544 11.9608 5.16552 11.9403C5.1056 11.9197 5.04206 11.9118 4.97893 11.9171C4.9158 11.9223 4.85443 11.9406 4.79872 11.9707C4.743 12.0009 4.69413 12.0422 4.65521 12.0922C4.57184 12.1962 4.53107 12.328 4.54115 12.461C4.54995 12.5932 4.60925 12.717 4.70677 12.8068C4.78073 12.8735 6.54896 14.4474 9.79115 14.4474C13.0339 14.4474 14.8021 12.8735 14.876 12.8068C14.9734 12.7169 15.0325 12.5931 15.0411 12.461C15.0512 12.3283 15.0107 12.1967 14.9276 12.0927Z" fill="#A24DE8"/>
+		</mask>
 	</svg>
 	<main>
 		<div class="navigation hide">
@@ -127,6 +133,14 @@
 				</li>
 			</nav>
 			<div class="bottom">
+				<a class="chat">
+					<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<g mask="url(#mask0_937_5382)">
+							<rect width="20" height="20" fill="#A24DE8"/>
+						</g>
+					</svg>
+					<span>Chat</span>
+				</a>
 				<a class="book-a-demo">
 					<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 						<g mask="url(#mask0_291_2964)">
@@ -202,6 +216,37 @@
 					</div>
 				</div>
 				<div class="content-header">
+
+					<!-- Mobile select -->
+
+					<div class="header-mobile-wrapper">
+						<div class="select">
+							<div class="select__header">
+								<span class="select__current"> Mariott international</span>
+								<span class="arrow-icon">
+									<svg width="20" height="20" viewBox="0 0 20 20" fill="#A24DE8" xmlns="http://www.w3.org/2000/svg">
+									<g mask="url(#mask0_553_20590)">
+									<rect width="20" height="20"/>
+									</g>
+									</svg>
+								</span>
+							</div>
+							<div class="select__body">
+								<div class="select__item">Mariott international</div>
+								<div class="select__item">Samsung</div>
+							</div>
+						</div>
+						<button class="add-company-mobile-btn secondary-btn">
+							<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<mask id="mask0_1027_33593" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="1" y="1" width="18" height="18">
+								<path fill-rule="evenodd" clip-rule="evenodd" d="M9 17.5C9 18.0523 9.44772 18.5 10 18.5C10.5523 18.5 11 18.0523 11 17.5V11H17.5C18.0523 11 18.5 10.5523 18.5 9.99998C18.5 9.4477 18.0523 8.99998 17.5 8.99998H11V2.5C11 1.94771 10.5523 1.5 10 1.5C9.44772 1.5 9 1.94771 9 2.5L9 8.99998H2.5C1.94772 8.99998 1.5 9.4477 1.5 9.99998C1.5 10.5523 1.94772 11 2.5 11H9L9 17.5Z" fill="#140E17"/>
+								</mask>
+								<g mask="url(#mask0_1027_33593)">
+								<rect width="20" height="20" fill="#A24DE8"/>
+								</g>
+							</svg>
+						</button>
+					</div>
 					<h1 class="header-title">
 						Marriott International
 					</h1>
@@ -451,8 +496,50 @@
 									</span>
 									<div class="select badge">
 										<div class="select__header">
-											<div class="indicator color-main-admin"></div>
-											<span class="select__current small-semibold-text">Main Admin</span>
+											<div class="indicator color-user"></div>
+											<span class="select__current small-semibold-text">User</span>
+											<span class="arrow-icon">
+												<svg width="20" height="20" viewBox="0 0 20 20" fill="#A24DE8" xmlns="http://www.w3.org/2000/svg">
+												<g mask="url(#mask0_553_20590)">
+												<rect width="20" height="20"/>
+												</g>
+												</svg>
+											</span>
+										</div>
+										<div class="select__body">
+											<div class="select__item">User</div>
+											<div class="select__item">Admin</div>
+											<div class="select__item">Main Admin</div>
+										</div>
+									</div>
+								</div>
+								<div class="table-cell date">
+									<span class="cell-header">
+										DATE
+									</span>
+									23.01.2021
+								</div>
+								<div class="table-cell">
+									<button class="btn-revoke-email link">
+										Revoke
+									</button>
+								</div>
+							</div>
+							<div class="table-row">
+								<div class="table-cell">
+									<span class="cell-header">
+										EMAIL
+									</span>
+									alexthompson@marriottinternational.com
+								</div>
+								<div class="table-cell">
+									<span class="cell-header">
+										ROLE
+									</span>
+									<div class="select badge">
+										<div class="select__header">
+											<div class="indicator color-admin"></div>
+											<span class="select__current small-semibold-text">Admin</span>
 											<span class="arrow-icon">
 												<svg width="20" height="20" viewBox="0 0 20 20" fill="#A24DE8" xmlns="http://www.w3.org/2000/svg">
 												<g mask="url(#mask0_553_20590)">
@@ -596,6 +683,190 @@
 									</button>
 								</div>
 							</div>
+							<div class="table-row">
+								<div class="table-cell cell-for-name">
+									<div class="wrap-name">
+										<div class="avatar john mini"></div>
+										Alex Thompson
+									</div>
+								</div>
+								<div class="table-cell cell-for-email">
+									<span class="cell-header">
+										EMAIL
+									</span>
+									alexthompson@marriottinternational.com
+								</div>
+								<div class="table-cell cell-for-rights">
+									<span class="cell-header">
+										ROLE
+									</span>
+									<div class="select badge">
+										<div class="select__header">
+											<div class="indicator color-main-admin"></div>
+											<span class="select__current small-semibold-text">Main Admin</span>
+											<span class="arrow-icon">
+												<svg width="20" height="20" viewBox="0 0 20 20" fill="#A24DE8" xmlns="http://www.w3.org/2000/svg">
+												<g mask="url(#mask0_553_20590)">
+												<rect width="20" height="20"/>
+												</g>
+												</svg>
+											</span>
+										</div>
+										<div class="select__body">
+											<div class="select__item">User</div>
+											<div class="select__item">Admin</div>
+											<div class="select__item">Main Admin</div>
+										</div>
+									</div>
+								</div>
+								<div class="table-cell cell-delete-btn">
+									<button class="btn-delete" onclick="showRemovedAlert()">
+										<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+											<g mask="url(#mask0_553_12885)">
+												<rect width="20" height="20" fill="#E22929"/>
+											</g>
+										</svg>
+									</button>
+								</div>
+							</div>
+							<div class="table-row">
+								<div class="table-cell cell-for-name">
+									<div class="wrap-name">
+										<div class="avatar john mini"></div>
+										Alex Thompson
+									</div>
+								</div>
+								<div class="table-cell cell-for-email">
+									<span class="cell-header">
+										EMAIL
+									</span>
+									alexthompson@marriottinternational.com
+								</div>
+								<div class="table-cell cell-for-rights">
+									<span class="cell-header">
+										ROLE
+									</span>
+									<div class="select badge">
+										<div class="select__header">
+											<div class="indicator color-main-admin"></div>
+											<span class="select__current small-semibold-text">Main Admin</span>
+											<span class="arrow-icon">
+												<svg width="20" height="20" viewBox="0 0 20 20" fill="#A24DE8" xmlns="http://www.w3.org/2000/svg">
+												<g mask="url(#mask0_553_20590)">
+												<rect width="20" height="20"/>
+												</g>
+												</svg>
+											</span>
+										</div>
+										<div class="select__body">
+											<div class="select__item">User</div>
+											<div class="select__item">Admin</div>
+											<div class="select__item">Main Admin</div>
+										</div>
+									</div>
+								</div>
+								<div class="table-cell cell-delete-btn">
+									<button class="btn-delete" onclick="showRemovedAlert()">
+										<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+											<g mask="url(#mask0_553_12885)">
+												<rect width="20" height="20" fill="#E22929"/>
+											</g>
+										</svg>
+									</button>
+								</div>
+							</div>
+							<div class="table-row">
+								<div class="table-cell cell-for-name">
+									<div class="wrap-name">
+										<div class="avatar john mini"></div>
+										Alex Thompson
+									</div>
+								</div>
+								<div class="table-cell cell-for-email">
+									<span class="cell-header">
+										EMAIL
+									</span>
+									alexthompson@marriottinternational.com
+								</div>
+								<div class="table-cell cell-for-rights">
+									<span class="cell-header">
+										ROLE
+									</span>
+									<div class="select badge">
+										<div class="select__header">
+											<div class="indicator color-main-admin"></div>
+											<span class="select__current small-semibold-text">Main Admin</span>
+											<span class="arrow-icon">
+												<svg width="20" height="20" viewBox="0 0 20 20" fill="#A24DE8" xmlns="http://www.w3.org/2000/svg">
+												<g mask="url(#mask0_553_20590)">
+												<rect width="20" height="20"/>
+												</g>
+												</svg>
+											</span>
+										</div>
+										<div class="select__body">
+											<div class="select__item">User</div>
+											<div class="select__item">Admin</div>
+											<div class="select__item">Main Admin</div>
+										</div>
+									</div>
+								</div>
+								<div class="table-cell cell-delete-btn">
+									<button class="btn-delete" onclick="showRemovedAlert()">
+										<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+											<g mask="url(#mask0_553_12885)">
+												<rect width="20" height="20" fill="#E22929"/>
+											</g>
+										</svg>
+									</button>
+								</div>
+							</div>
+							<div class="table-row">
+								<div class="table-cell cell-for-name">
+									<div class="wrap-name">
+										<div class="avatar john mini"></div>
+										Alex Thompson
+									</div>
+								</div>
+								<div class="table-cell cell-for-email">
+									<span class="cell-header">
+										EMAIL
+									</span>
+									alexthompson@marriottinternational.com
+								</div>
+								<div class="table-cell cell-for-rights">
+									<span class="cell-header">
+										ROLE
+									</span>
+									<div class="select badge">
+										<div class="select__header">
+											<div class="indicator color-main-admin"></div>
+											<span class="select__current small-semibold-text">Main Admin</span>
+											<span class="arrow-icon">
+												<svg width="20" height="20" viewBox="0 0 20 20" fill="#A24DE8" xmlns="http://www.w3.org/2000/svg">
+												<g mask="url(#mask0_553_20590)">
+												<rect width="20" height="20"/>
+												</g>
+												</svg>
+											</span>
+										</div>
+										<div class="select__body">
+											<div class="select__item">User</div>
+											<div class="select__item">Admin</div>
+											<div class="select__item">Main Admin</div>
+										</div>
+									</div>
+								</div>
+								<div class="table-cell cell-delete-btn">
+									<button class="btn-delete" onclick="showRemovedAlert()">
+										<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+											<g mask="url(#mask0_553_12885)">
+												<rect width="20" height="20" fill="#E22929"/>
+											</g>
+										</svg>
+									</button>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -669,30 +940,55 @@
 						</span>
 						</div>
 						<div class="dropdown-body">
-							<a href="#" class="company-item link">
+							<button href="#" class="company-item select">
 								Marriott International
-							</a>
+							</button>
+							<button href="#" class="company-item">
+								Samsung
+							</button>
+							<button href="#" class="company-item">
+								<svg width="20" height="20" viewBox="0 0 20 20" fill="#A2A2A2" xmlns="http://www.w3.org/2000/svg">
+									<mask id="mask0_1027_30240" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="20" height="20">
+									<path fill-rule="evenodd" clip-rule="evenodd" d="M8.99977 18.0667C8.99977 18.619 9.44749 19.0667 9.99977 19.0667C10.5521 19.0667 10.9998 18.619 10.9998 18.0667V11H18.0664C18.6187 11 19.0664 10.5523 19.0664 10C19.0664 9.44774 18.6187 9.00002 18.0664 9.00002H10.9998V1.93335C10.9998 1.38107 10.5521 0.93335 9.99977 0.93335C9.44749 0.93335 8.99977 1.38107 8.99977 1.93335V9.00002H1.93311C1.38082 9.00002 0.933105 9.44774 0.933105 10C0.933105 10.5523 1.38082 11 1.93311 11H8.99977V18.0667Z" fill="#140E17"/>
+									</mask>
+									<g mask="url(#mask0_1027_30240)">
+									<rect width="20" height="20"/>
+									</g>
+								</svg>
+								Add new company
+							</button>
 						</div>
 					</div>
 				</li>
 			</nav>
-			<a class="book-a-demo">
-				<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-					<mask id="mask0_291_2964" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="2" y="2" width="20" height="20">
-						<path d="M13.5 13C13.5 12.3096 12.9404 11.75 12.25 11.75C11.5596 11.75 11 12.3096 11 13C11 13.6904 11.5596 14.25 12.25 14.25C12.9404 14.25 13.5 13.6904 13.5 13Z" fill="#A24DE8"/>
-						<path fill-rule="evenodd" clip-rule="evenodd" d="M2 15C2 16.6569 3.34315 18 5 18H11V20H9C8.44772 20 8 20.4477 8 21C8 21.5523 8.44772 22 9 22H15C15.5523 22 16 21.5523 16 21C16 20.4477 15.5523 20 15 20H13V18H19C20.6569 18 22 16.6569 22 15V5C22 3.34315 20.6569 2 19 2H5C3.34315 2 2 3.34315 2 5V15ZM5 16C4.44772 16 4 15.5523 4 15L4 5C4 4.44772 4.44772 4 5 4L19 4C19.5523 4 20 4.44772 20 5V15C20 15.5523 19.5523 16 19 16H5Z" fill="#A24DE8"/>
-					</mask>
-					<g mask="url(#mask0_291_2964)">
-						<rect width="24" height="24" fill="#A24DE8"/>
-					</g>
-				</svg>
-				<span>Book a demo</span>
-			</a>
-			<div class="user">
-				<div class="avatar john mini"></div>
-				<span class="regular-text">Constantine</span>
+			<div class="menu-bottom">
+				<a class="book-a-demo">
+					<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<mask id="mask0_291_2964" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="2" y="2" width="20" height="20">
+							<path d="M13.5 13C13.5 12.3096 12.9404 11.75 12.25 11.75C11.5596 11.75 11 12.3096 11 13C11 13.6904 11.5596 14.25 12.25 14.25C12.9404 14.25 13.5 13.6904 13.5 13Z" fill="#A24DE8"/>
+							<path fill-rule="evenodd" clip-rule="evenodd" d="M2 15C2 16.6569 3.34315 18 5 18H11V20H9C8.44772 20 8 20.4477 8 21C8 21.5523 8.44772 22 9 22H15C15.5523 22 16 21.5523 16 21C16 20.4477 15.5523 20 15 20H13V18H19C20.6569 18 22 16.6569 22 15V5C22 3.34315 20.6569 2 19 2H5C3.34315 2 2 3.34315 2 5V15ZM5 16C4.44772 16 4 15.5523 4 15L4 5C4 4.44772 4.44772 4 5 4L19 4C19.5523 4 20 4.44772 20 5V15C20 15.5523 19.5523 16 19 16H5Z" fill="#A24DE8"/>
+						</mask>
+						<g mask="url(#mask0_291_2964)">
+							<rect width="24" height="24" fill="#A24DE8"/>
+						</g>
+					</svg>
+					<span>Book a demo</span>
+				</a>
+				<div class="user">
+					<div class="avatar john mini"></div>
+					<span class="regular-text">Constantine</span>
+				</div>
 			</div>
 		</div>
+		<!-- Navigation-btn-chat-mobile  -->
+
+		<button class="btn-chat-mobile">
+			<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+				<g mask="url(#mask0_947_30047)">
+					<rect width="20" height="20" fill="white"/>
+				</g>
+			</svg>
+		</button>
 	</main>
 
 <script src="../../../js/show-menu.js"></script>
