--- a/pages/Company/index.html
+++ b/pages/Company/index.html
@@ -66,6 +66,12 @@
 		<mask id="mask0_601_13888" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="20" height="20">
 			<path fill-rule="evenodd" clip-rule="evenodd" d="M9.00026 18.0669C9.00026 18.6192 9.44798 19.0669 10.0003 19.0669C10.5525 19.0669 11.0003 18.6192 11.0003 18.0669V11.0003H18.0669C18.6192 11.0003 19.0669 10.5526 19.0669 10.0003C19.0669 9.44798 18.6192 9.00027 18.0669 9.00027H11.0003V1.93359C11.0003 1.38131 10.5525 0.933594 10.0003 0.933594C9.44798 0.933594 9.00026 1.38131 9.00026 1.93359V9.00027H1.93359C1.38131 9.00027 0.933594 9.44798 0.933594 10.0003C0.933594 10.5526 1.38131 11.0003 1.93359 11.0003H9.00026V18.0669Z" fill="#140E17"/>
 		</mask>
+		<mask id="mask0_937_5382" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="2" y="1" width="16" height="18">
+			<path d="M17.0833 18.3337C17.0833 18.3337 14.6281 17.3675 12.6422 16.5941H4.2901C3.30208 16.5941 2.5 15.743 2.5 14.6946V3.56491C2.5 2.51751 3.30208 1.66699 4.2901 1.66699H15.2927C16.2813 1.66699 17.0828 2.51699 17.0828 3.56543V13.1508L17.0833 18.3337ZM14.9276 12.093C14.8886 12.043 14.8396 12.0015 14.7838 11.9714C14.7279 11.9412 14.6664 11.923 14.6032 11.9179C14.5399 11.9127 14.4763 11.9208 14.4163 11.9415C14.3563 11.9623 14.3013 11.9952 14.2547 12.0383C14.2391 12.0519 12.6844 13.4347 9.79115 13.4347C6.93386 13.4347 5.35521 12.0618 5.32708 12.0368C5.28046 11.9939 5.22544 11.9611 5.16552 11.9406C5.1056 11.92 5.04206 11.9121 4.97893 11.9174C4.9158 11.9226 4.85443 11.9409 4.79872 11.971C4.743 12.0012 4.69413 12.0425 4.65521 12.0925C4.57184 12.1965 4.53107 12.3283 4.54115 12.4613C4.54995 12.5935 4.60925 12.7173 4.70677 12.8071C4.78073 12.8738 6.54896 14.4477 9.79115 14.4477C13.0339 14.4477 14.8021 12.8738 14.876 12.8071C14.9734 12.7172 15.0325 12.5934 15.0412 12.4613C15.0512 12.3286 15.0107 12.197 14.9276 12.093Z" fill="#A24DE8"/>
+		</mask>
+		<mask id="mask0_947_30047" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="2" y="1" width="16" height="18">
+			<path d="M17.0833 18.3334C17.0833 18.3334 14.6281 17.3672 12.6422 16.5938H4.2901C3.30208 16.5938 2.5 15.7427 2.5 14.6943V3.5646C2.5 2.51721 3.30208 1.66669 4.2901 1.66669H15.2927C16.2812 1.66669 17.0828 2.51669 17.0828 3.56512V13.1505L17.0833 18.3334ZM14.9276 12.0927C14.8886 12.0427 14.8396 12.0012 14.7838 11.9711C14.7279 11.9409 14.6664 11.9227 14.6032 11.9176C14.5399 11.9124 14.4763 11.9205 14.4163 11.9412C14.3563 11.962 14.3013 11.9949 14.2547 12.038C14.2391 12.0516 12.6844 13.4344 9.79115 13.4344C6.93385 13.4344 5.35521 12.0615 5.32708 12.0365C5.28046 11.9936 5.22544 11.9608 5.16552 11.9403C5.1056 11.9197 5.04206 11.9118 4.97893 11.9171C4.9158 11.9223 4.85443 11.9406 4.79872 11.9707C4.743 12.0009 4.69413 12.0422 4.65521 12.0922C4.57184 12.1962 4.53107 12.328 4.54115 12.461C4.54995 12.5932 4.60925 12.717 4.70677 12.8068C4.78073 12.8735 6.54896 14.4474 9.79115 14.4474C13.0339 14.4474 14.8021 12.8735 14.876 12.8068C14.9734 12.7169 15.0325 12.5931 15.0411 12.461C15.0512 12.3283 15.0107 12.1967 14.9276 12.0927Z" fill="#A24DE8"/>
+		</mask>
 	</svg>
 	<main>
 		<div class="navigation hide">
@@ -106,6 +112,14 @@
 				</li>
 			</nav>
 			<div class="bottom">
+				<a class="chat">
+					<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<g mask="url(#mask0_937_5382)">
+							<rect width="20" height="20" fill="#A24DE8"/>
+						</g>
+					</svg>
+					<span>Chat</span>
+				</a>
 				<a class="book-a-demo">
 					<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 						<g mask="url(#mask0_291_2964)">
@@ -133,10 +147,13 @@
 				<h2 class="submenu-title">
 					Companies
 				</h2>
+
+				<!-- add in button class='disabled' -->
+
 				<button class="btn tetriary-btn">
-					<svg width="41" height="40" viewBox="0 0 41 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+					<svg width="41" height="40" viewBox="0 0 41 40" fill="#A24DE8" xmlns="http://www.w3.org/2000/svg">
 						<g mask="url(#mask0_373_6552)">
-							<rect x="0.5" width="40" height="40" fill="#A24DE8"/>
+							<rect x="0.5" width="40" height="40"/>
 						</g>
 					</svg>
 					Add company
@@ -147,7 +164,10 @@
 			</div>
 		</div>
 		<div class="container-content">
-			<div class="content-empty">
+
+			<!-- add in contetn-empty class='isActive' -->
+
+			<div class="content-empty isActive" onclick="switchContentMainContainer()">
 				<h3 class="content-title">
 					You don’t have company yet
 				</h3>
@@ -157,14 +177,40 @@
 					</a>
 					 and invite members to it
 				</span>
+				<button class="btn tetriary-btn mobile-btn">
+					<svg width="41" height="40" viewBox="0 0 41 40" fill="#A24DE8" xmlns="http://www.w3.org/2000/svg">
+						<g mask="url(#mask0_373_6552)">
+							<rect x="0.5" width="40" height="40"/>
+						</g>
+					</svg>
+					Add new company
+				</button>
+			</div>
 
-<!--				Link to setting-->
+			<!-- add in contetn-empty class='isActive' -->
 
+			<div class="content-empty not-confirmed" onclick="switchContentMainContainer()">
+				<h3 class="content-title">
+					You can’t create company yet
+				</h3>
+				<span class="content-description">
+					Your email isn’t confirmed
+				</span>
 				<a class="link-to-setting link">
 					Go to settings
 				</a>
 			</div>
 		</div>
+
+		<!-- Navigation-btn-chat-mobile  -->
+
+		<button class="btn-chat-mobile">
+			<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+				<g mask="url(#mask0_947_30047)">
+					<rect width="20" height="20" fill="white"/>
+				</g>
+			</svg>
+		</button>
 	</main>
 
 <!--	Modal window-->
@@ -218,7 +264,8 @@
 						<div class="loaded-photo mini" onclick="changePhoto()">
 							<div class="photo"></div>
 							<div class="instruments">
-								<div class="left btn-link-text">Change photo</div>
+								<input type="file" class="left btn-link-text upload-photo-input" accept="image/*">
+								<!-- <div class="left btn-link-text">Change photo</div> -->
 								<div class="right btn-link-text">Remove</div>
 							</div>
 						</div>
@@ -284,7 +331,7 @@
 						</div>
 						<div class="text-field text-field_floating select-input">
 							<input class="text-field__input" type="text" id="other" placeholder=" " required>
-							<label class="text-field__label" for="other">E-mail*</label>
+							<label class="text-field__label" for="other">Other position*</label>
 						</div>
 					</div>
 					<button class="btn primary-btn" type="submit">Create company</button>
@@ -298,7 +345,7 @@
 					</h2>
 					<div class="counter-wrap">
 						Marriott International
-						<div class="counter gray">20</div>
+						<div class="counter gray">2</div>
 					</div>
 					<div class="rights-company-dropdown isOpen" onclick="openDropdown()">
 						<div class="dropdown-header">
@@ -358,12 +405,12 @@
 								<div class="select__header">
 									<span class="select__current"> Admin</span>
 									<span class="arrow-icon">
-							<svg width="20" height="20" viewBox="0 0 20 20" fill="#A24DE8" xmlns="http://www.w3.org/2000/svg">
-							<g mask="url(#mask0_553_20590)">
-							<rect width="20" height="20"/>
-							</g>
-							</svg>
-						</span>
+										<svg width="20" height="20" viewBox="0 0 20 20" fill="#A24DE8" xmlns="http://www.w3.org/2000/svg">
+										<g mask="url(#mask0_553_20590)">
+										<rect width="20" height="20"/>
+										</g>
+										</svg>
+									</span>
 								</div>
 								<div class="select__body">
 									<div class="select__item">User</div>
@@ -456,6 +503,13 @@
             element.style.height = "1px";
             element.style.height = (element.scrollHeight)+"px";
         }
+
+		const switchContentMainContainer = () => {
+			const contentA = document.querySelector('.content-empty')
+			const contentB = document.querySelector('.not-confirmed')
+			contentA.classList.toggle('isActive')
+			contentB.classList.toggle('isActive')
+		}
 
 	</script>
 </body>
